updates swagger and related build steps
